// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepTitle renders correctly  1`] = `
<DocumentFragment>
  .cache-1lgdhts-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-t9e53m-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1m08j4b-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-1lgdhts-Step e17jwwhf1"
  >
    <div
      class="cache-t9e53m-StyledContainer e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1m08j4b-StyledDiv e17jwwhf0"
    >
      Item 1
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with custom keyPrefix 1`] = `
<DocumentFragment>
  .cache-1lgdhts-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-t9e53m-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1m08j4b-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-1lgdhts-Step e17jwwhf1"
  >
    <div
      class="cache-t9e53m-StyledContainer e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1m08j4b-StyledDiv e17jwwhf0"
    >
      Item 1
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with disabled state 1`] = `
<DocumentFragment>
  .cache-b6lmz-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b2b6c3;
}

.cache-16j3ie1-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1m08j4b-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-b6lmz-Step e17jwwhf1"
  >
    <div
      class="cache-16j3ie1-StyledContainer e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1m08j4b-StyledDiv e17jwwhf0"
    >
      <div>
        Item 1 with disabled state
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with small size 1`] = `
<DocumentFragment>
  .cache-1lgdhts-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-1ut1z3i-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

.cache-1wj8egs-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 8px;
  font-size: 16px;
}

<div
    class="cache-1lgdhts-Step e17jwwhf1"
  >
    <div
      class="cache-1ut1z3i-StyledContainer e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1wj8egs-StyledDiv e17jwwhf0"
    >
      Item 1 small
    </div>
  </div>
</DocumentFragment>
`;
